# node.si64

./: .env.twitter  .gitattributes  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  Cargo.toml  DEPLOY_RC1.md  Dockerfile  Dockerfile.brain  Dockerfile.vanguard  Dockerfile.worker  FINANCIAL_API_DOCS.md  FINANCIAL_BACKEND_INDEX.md  FINANCIAL_BACKEND_SUMMARY.md  FINANCIAL_DEPLOYMENT_GUIDE.md  FINANCIAL_FEATURES.txt  FRONTEND_INTEGRATION.md  JUGGERNAUT_DEPLOYMENT_GUIDE.md  QUICK_START.sh  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENING_COMPLETE.txt  SECURITY_REPORT.json  SI64_BOT_INTEGRATION.md  SI64_TWITTER_BOT_GUIDE.md  STRESS_TEST_REPORT.json  SYSTEM_STATUS.md  VANGUARD_DEPLOYMENT_GUIDE.md  VANGUARD_INDEX.md  VANGUARD_QUICK_START.md  VANGUARD_SUMMARY.txt  WORKER_ONBOARDING.md  bot_keypair.json  build_and_push.sh  coding_config.json  deploy_fleet.sh  docker-compose.yml  dotenv.py  fire_tweet.py  fire_tweet.sh  (+43 more)
BACKUPS/: master_control.py  predictor.py  revenue_b_factory.py  titan_config.py
brain/: dispatcher.py  genesis.key  metrics_reporter.py  migration_tool.py  payout_worker.py  swarm_commander.py
core/: worker_node.py
data_warehouse/: AUTO-DRY-MEMPOOL-5k_5000_organic.csv  DRY-ORG-TEST2_5_organic.csv  DRY-ORG-TEST_10_organic.csv  LIVE-MEMPOOL-5k-20260113203915_5000.csv  LIVE-MEV-5k-20260113203915_5000.csv  README.md  README_MEV_ORG_STD.md  Spark_Pack_5000.csv  TITAN-AGX-20260112-0D15_100000.csv  TITAN-AGX-20260112-0D15_5000.csv  TITAN-AGX-20260112-4LVQ_5000.csv  TITAN-AGX-20260112-6EW4_5000.csv  TITAN-AGX-20260112-AM69_5000.csv  TITAN-AGX-20260112-DZXV_5000.csv  (+9 more)
(+809 files in other folders)
