[package]
name = "orin_mev_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bs58 = "0.5"
dotenv = "0.15"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
zeromq = "0.4"
